--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,26 +34,22 @@ jobs:
          - name: Build site
            run: npm run build
 
+         - name: Upload build artifact
+           uses: actions/upload-artifact@v4
+           with:
+              name: dist
+              path: ./dist
+
    deploy:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       needs: check-and-build
       runs-on: ubuntu-latest
       steps:
-         - name: Checkout code
-           uses: actions/checkout@v4
+         - name: Download build artifact
+           uses: actions/download-artifact@v4
            with:
-              fetch-depth: 0
-
-         - name: Use Node.js version from .nvmrc
-           uses: actions/setup-node@v4
-           with:
-              node-version-file: .nvmrc
-
-         - name: Install dependencies
-           run: npm ci
-
-         - name: Build site
-           run: npm run build
+              name: dist
+              path: ./dist
 
          - name: Deploy to GitHub Pages
            uses: peaceiris/actions-gh-pages@v4
