--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,25 +34,20 @@ jobs:
          - name: Build site
            run: npm run build
 
-         - name: Upload build artifact
-           uses: actions/upload-artifact@v4
+         - name: Upload GitHub Pages artifact
+           uses: actions/upload-pages-artifact@v3
            with:
-              name: dist
               path: ./dist
 
    deploy:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       needs: check-and-build
+      permissions:
+         pages: write
+         id-token: write
+      environment:
+         name: github-pages
       runs-on: ubuntu-latest
       steps:
-         - name: Download build artifact
-           uses: actions/download-artifact@v4
-           with:
-              name: dist
-              path: ./dist
-
          - name: Deploy to GitHub Pages
-           uses: peaceiris/actions-gh-pages@v4
-           with:
-              github_token: ${{ secrets.GITHUB_TOKEN }}
-              publish_dir: ./dist
+           uses: actions/deploy-pages@v4
